modify-lucide-ui

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>kh125's Static Apps Portfolio</title>
+     <title>kh125's Japanese Study Tools</title>
      <!-- Load Tailwind CSS -->
      <script src="https://cdn.tailwindcss.com"></script>
      <!-- Load Lucide Icons (for simple, clean icons) -->
@@ -41,13 +41,13 @@
                     kh125.github.io
                </h1>
                <p class="text-xl sm:text-2xl text-gray-400 max-w-2xl mx-auto">
-                    A collection of modern, static web applications and experiments built with simple technologies.
+                    A focused collection of static tools designed for Japanese language learners and JLPT preparation.
                </p>
           </header>
 
           <!-- Application Cards Grid -->
           <section id="app-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-               <!-- App Card Component (Content loaded dynamically from apps array) -->
+               <!-- App Card Component (Content loaded dynamically) -->
                <div class="col-span-full text-center py-12 text-gray-500">Loading applications...</div>
           </section>
 
@@ -58,59 +58,31 @@
      </div>
 
      <script>
+          // Updated data array with only the two requested JLPT applications
           const apps = [
                {
-                    name: "Real-Time Todo List",
-                    description: "A collaborative todo list application using React and Firebase Firestore for real-time synchronization across users.",
-                    demoUrl: "https://kh125.github.io/todo-app/",
-                    repoUrl: "https://github.com/kh125/todo-app",
-                    icon: "list-todo"
+                    name: "JLPT N5 Kotoba (Vocabulary)",
+                    description: "A focused study tool for mastering the essential vocabulary required for the Japanese Language Proficiency Test N5 level.",
+                    demoUrl: "https://kh125.github.io/jlpt-n5-kotoba/",
+                    repoUrl: "https://github.com/kh125/jlpt-n5-kotoba",
+                    icon: "book-open" // Icon representing a book/learning
                },
                {
-                    name: "Markdown Previewer",
-                    description: "A simple, fast, and local Markdown editor that instantly previews rendered HTML content as you type.",
-                    demoUrl: "https://kh125.github.io/markdown-previewer/",
-                    repoUrl: "https://github.com/kh125/markdown-previewer",
-                    icon: "code"
-               },
-               {
-                    name: "Interactive Clock Display",
-                    description: "A beautiful and minimalist digital and analog clock display built with vanilla JavaScript and CSS animations.",
-                    demoUrl: "https://kh125.github.io/clock-display/",
-                    repoUrl: "https://github.com/kh125/clock-display",
-                    icon: "clock"
-               },
-               {
-                    name: "Responsive Gallery",
-                    description: "An adaptive image gallery template optimized for performance and fluid scaling on all mobile and desktop devices.",
-                    demoUrl: "https://kh125.github.io/responsive-gallery/",
-                    repoUrl: "https://github.com/kh125/responsive-gallery",
-                    icon: "layout-grid"
-               },
-               {
-                    name: "BMI Calculator",
-                    description: "A quick health tool to calculate Body Mass Index, featuring a clean form and instant, responsive feedback.",
-                    demoUrl: "https://kh125.github.io/bmi-calculator/",
-                    repoUrl: "https://github.com/kh125/bmi-calculator",
-                    icon: "scale"
-               },
-               {
-                    name: "3D Solar System Viewer",
-                    description: "A simple visualization of the solar system orbits built using Three.js, focusing on smooth camera controls.",
-                    demoUrl: "https://kh125.github.io/3d-solar-system/",
-                    repoUrl: "https://github.com/kh125/3d-solar-system",
-                    icon: "globe"
+                    name: "Kanji Flashcards & Practice",
+                    description: "A dedicated application for practicing and learning fundamental Kanji characters. Essential for N5 and beyond.",
+                    demoUrl: "https://kh125.github.io/kanji/",
+                    repoUrl: "https://github.com/kh125/kanji",
+                    icon: "type" // Icon representing text/characters
                }
           ];
 
-          // Function to render application cards
+          // Function to render application cards (remains the same)
           function renderAppCards(apps) {
                const appList = document.getElementById('app-list');
                appList.innerHTML = ''; // Clear existing content
 
                if (!apps || apps.length === 0) {
                     appList.innerHTML = '<p class="col-span-full text-center text-gray-500 py-12">No applications found.</p>';
-                    // Initialize Lucide icons
                     if (typeof lucide !== 'undefined') {
                          lucide.createIcons();
                     }
@@ -124,7 +96,6 @@
 
                     card.innerHTML = `
                          <div class="flex items-center mb-4">
-                         <!-- Icon placeholder from Lucide - the inner SVG will be rendered by the Lucide script -->
                          <i data-lucide="${app.icon}" class="icon text-indigo-400"></i>
                          <h2 class="text-2xl font-semibold text-gray-200">${app.name}</h2>
                          </div>
@@ -135,14 +106,14 @@
                          <a href="${app.demoUrl}" target="_blank" rel="noopener noreferrer" 
                               class="flex-1 text-center py-2 px-4 rounded-lg font-medium text-white 
                                    bg-indigo-600 hover:bg-indigo-500 transition duration-150 shadow-md shadow-indigo-500/50 
-                                   flex items-center justify-center text-sm sm:text-base">
+                                   flex items-center justify-center text-sm sm:text-base whitespace-nowrap">
                               <i data-lucide="play" class="icon w-4 h-4 mr-2"></i>
                               Live Demo
                          </a>
                          <a href="${app.repoUrl}" target="_blank" rel="noopener noreferrer" 
                               class="flex-1 text-center py-2 px-4 rounded-lg font-medium text-indigo-400 
                                    border border-gray-600 hover:bg-gray-800 transition duration-150
-                                   flex items-center justify-center text-sm sm:text-base">
+                                   flex items-center justify-center text-sm sm:text-base whitespace-nowrap">
                               <i data-lucide="github" class="icon w-4 h-4 mr-2"></i>
                               Source
                          </a>
@@ -156,7 +127,9 @@
                }
           }
 
-          renderAppCards(apps);
+          window.onload = function() {
+               renderAppCards(apps);
+          };
      </script>
 </body>
 </html>
